<resources>
    <string name="app_name">Final Project for Java Android</string>
    <string name="two_players">Two Players</string>
    <string name="play_solo">Play Solo</string>
    <string name="settings">Settings</string>
    <string name="game_mode">Game Mode</string>
    <string name="easy_mode">Easy Mode</string>
    <string name="hard_mode">Hard Mode</string>
    <string name="choose_your_letter">Choose Your Letter</string>
    <string name="player_1_name">Player 1 Name</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="player1_letter">Player1 Letter</string>
    <string name="you">You :</string>
    <string name="bot">Bot :</string>
    <string name="score">Score</string>
    <string name="game">Game</string>
    <string name="background_music">Background Music</string>
    <string name="click_sound">Click Sound</string>
    <string name="change_language">Change Language</string>
    <string name="btn_on">ON</string>
    <string name="btn_off">OFF</string>
    <string name="choose_language">Choose language</string>
    <string name="you_game">You</string>
    <string name="bot_game">Bot</string>
    <string name="change">Change</string>
    <string name="on">ON</string>
    <string name="twoError">Please Enter your name and your friend name</string>
    <string name="friend1Error">Please Enter your friend name</string>
    <string name="player2Error">Please Enter your name</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">dont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Have an account?</string>
    <string name="username">Username</string>
    <string name="please_fill_in_both_fields">Please fill in both fields</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_email_or_password">Invalid Email or Password</string>
    <string name="fill_all_the_fields_please">Fill all the fields please</string>
    <string name="congratulations"> Congratulations </string>
    <string name="good_game">Good Game!</string>
    <string name="wanna_play_again">Wanna play again?</string>
    <string name="new_game">New Game</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up_successfully">Sign Up Successfully</string>


</resources>