<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launcherpic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back"
        android:textColor="#9A0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/signup_btn_signup_activity"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#9A0000"
        android:text="@string/sign_up"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_password_signup"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/et_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_password_signup" />

    <EditText
        android:id="@+id/et_username"
        style="@style/BUTTON"
        android:textStyle="bold"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/sign_in_shape"
        android:ems="10"
        android:textSize="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/et_email_signup"
        android:textSize="20dp"
        android:textStyle="bold"
        style="@style/BUTTON"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/sign_in_shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password_signup"
        style="@style/BUTTON"
        android:textSize="20dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:background="@drawable/sign_in_shape"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword|textEnableTextConversionSuggestions"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_email_signup" />
    <TextView
        android:id="@+id/textView10"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn_signup_activity" />

    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="64dp"
        android:text="@string/sign_in"
        android:textColor="#9A0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>