<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logIn">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/launcherpic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back"
        android:textColor="#9A0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/sign_in_btn_signin_activity"
        style="@style/BUTTON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9A0000"
        android:text="@string/sign_in"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_password_login"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/et_password_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password_login" />

    <EditText
        android:id="@+id/et_password_login"
        style="@style/BUTTON"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/sign_in_shape"
        android:drawableStart="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textSize="20dp"
        android:inputType="text|textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_login"
        app:layout_constraintTop_toBottomOf="@+id/et_email_login" />

    <EditText
        android:id="@+id/et_email_login"
        style="@style/BUTTON"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/sign_in_shape"
        android:drawableStart="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="180dp"
        android:text="@string/dont_have_an_account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sign_up"
        android:textColor="#9A0000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>