<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/your_name_et"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="600dp"
        android:background="@drawable/btn_shape"
        android:drawableStart="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/player_1_name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/x"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/img_btn"
        android:src="@drawable/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648" />

    <ImageButton
        android:id="@+id/o"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/img_btn"
        android:src="@drawable/o"
        app:layout_constraintBottom_toBottomOf="@+id/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toEndOf="@+id/x"
        app:layout_constraintTop_toTopOf="@+id/x"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_enter_your_name"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_letter"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/friend_name_et"
        style="@style/TEXT"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_marginBottom="504dp"
        android:background="@drawable/btn_shape"
        android:drawableStart="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/player_2_name"
        android:inputType="text"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
